2009-05-25 Iuri Fernandes <iurifq@gmail.com>
* Fixed hidden field in views/alugueis/new.html.erb
* Fixed some bugs in alugueis controller, but its necessary to fix the model
to adjust to the database 

2009-05-25 Iuri Fernandes <iurifq@gmail.com>
* Created "contratação de aluguel"

2009-05-25 Iuri Fernandes <iurifq@gmail.com>
* Fixed bug in plural of aluguel

2009-05-25 Iuri Fernandes <iurifq@gmail.com>
* Added skeleton of alugueis

2009-05-25 Iuri Fernandes <iurifq@gmail.com>
* Renamed some columns in createTables.sql
* Created "aluguel" model

2009-05-25 Iuri Fernandes <iurifq@gmail.com>
* Added link in "apartamento" to "conta"
* Created show view and controller to "conta"
* Modified createTables.sql to fit better to the application
* Adjusted some details in "conta" and "apartamento" models

2009-05-24 Suzana Matos <suzana.mato@gmail.com>
* Fixed createTable.sql again...

2009-05-24 Iuri Fernandes <iurifq@gmail.com>
* Forgot to add app/views/apartamento/hospedar.html.erb
* Created link in "apartamento" to "hospedar"
* Date selection of entrance and exit are missing

2009-05-24 Iuri Fernandes <iurifq@gmail.com>
* Finally a "conta" object is been saved. However, it's still necessary to
set the appartment as occupied
* Added app/models/conta.rb

2009-05-24 Suzana Matos <suzana.mato@gmail.com>
* Fixed createTable.sql

2009-05-24 Iuri Fernandes <iurifq@gmail.com>
* Fixed some bugs in hospedar, but it is still not working

2009-05-24 Iuri Fernandes <iurifq@gmail.com>
* Created hospedar action, but it is still not working

2009-05-23 Suzana Matos <suzana.mato@gmail.com>
* Created tipos_pagamentos (scaffold) and included it in menu

2009-05-23 Suzana Matos <suzana.mato@gmail.com>
* boradois.xmi :
	- fixed
* public/stylesheets/scaffold :
	- added <h2> (to use in menu)
* app/views/shared/_menu_admin.html.erb :
	- changed the menu view
* db/createTables :
	- created all others tables

2009-05-05 Suzana Matos <suzana.mato@gmail.com>
* models/reserva : fixed.