@@ -1,7 +1,7 @@
 class Aluguel < ActiveRecord::Base
 	set_table_name 'alugueis'
 
-	belongs_to :apartamento
+	belongs_to :conta
 	belongs_to :servico
 
 end
